reorder navlist fixed navlist overlap in mobile view

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ nav .nav-list .nav-link {
         transition: 0.6s;
         cursor: pointer;
         z-index: 10;
+        margin-top:-75px
     }
 
     nav .nav-list .nav-item {
